Fixed - MaterialCollection: border between items sometimes doesn't show on Firefox #193

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -386,6 +386,7 @@ nav .nav-wrapper .collapsible-body {
 .collection-item.waves-effect {
 	display: block;
 	padding-bottom: 0;
+	will-change: initial;
 }
 
 .collection .collection-item .secondary-content i {
